--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,7 @@ img {
   max-width: 320px;
   border-radius: 20px;
   background-color: var(--clr-white);
+  box-shadow: 0 30px 70px -40px var(--clr-dark-blue);
 }
 
 @media screen and (min-width: 600px) {
@@ -69,7 +70,7 @@ h1 {
 
 p {
   margin-top: 16px;
-  padding-inline: 12px;
+  padding-inline: 15px;
   font-size: var(--font-size);
   font-weight: 400;
   color: var(--clr-greylish-blue);
